@@ -20,7 +20,10 @@
 */
 #ifndef FIM_FIM_H
 #define FIM_FIM_H
+#if FIM_WITH_DEBUG 
+#else
 #define NDEBUG 1	/* turns off assert() functionality */
+#endif
 
 /*
  * config.h is generated by autoconf and defines some symbols used by Fim
